Label & Text Field Alignment Fix

--- a/public/assets/css/TemplateBuilder.css
+++ b/public/assets/css/TemplateBuilder.css
@@ -375,7 +375,8 @@ select {
 }
 
 .label-block .element-body {
-  display: flex;
+  display: block;
+  padding: 2px;
   align-items: center;
   justify-content: flex-start;
   height: 100%;
